[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cert-sdk"
version = "0.1.0"
description = "Python SDK for CERT LLM monitoring dashboard"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Javier Marin", email = "javier@jmarin.info"},
]
keywords = ["llm", "monitoring", "observability", "ai", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://dashboard.cert-framework.com"
Documentation = "https://github.com/yourusername/cert-sdk#readme"
Repository = "https://github.com/yourusername/cert-sdk"
Issues = "https://github.com/yourusername/cert-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cert"]
