[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cert-sdk"
version = "0.2.0"
description = "Python SDK for CERT LLM monitoring - quality evaluation and EU AI Act compliance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Javier Marin", email = "javier@jmarin.info"},
]
keywords = [
    "llm",
    "monitoring",
    "observability",
    "ai",
    "tracing",
    "evaluation",
    "rag",
    "agents",
    "eu-ai-act",
    "compliance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://cert-framework-production.up.railway.app"
Documentation = "https://github.com/Javihaus/cert-sdk#readme"
Repository = "https://github.com/Javihaus/cert-sdk"
Issues = "https://github.com/Javihaus/cert-sdk/issues"
Changelog = "https://github.com/Javihaus/cert-sdk/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/cert"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src/cert"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
